@@ -1,3 +1,8 @@
+2011-01-30  Rik  <octave@nomad.inbox5.com>
+
+	* DLD-FUNCTIONS/__init_fltk__.cc (mouse_wheel_zoom, gui_mode): Rename
+	functions and strip "fltk_" prefix.  Improve docstrings.
+
 2011-01-30  John W. Eaton  <jwe@octave.org>
 
 	* txt-eng-ft.cc (ft_manager::ft_manager): Omit fc_init_done from
